# HH_vacancies

./: README.md  config.py  main.py  pyproject.toml
data/: vacancy_hh.json
src/: abstract_api_vacancy.py  func_to_user.py  save_vacancy_json.py  working_with_vacancy.py
tests/: test_working_with_vacancy.py
