[tool.poetry]
name = "hh-vacancies"
version = "0.1.0"
description = ""
authors = ["Maksim Toguzov <magadan499@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
